# agentrunner

./: .gitignore  README.md  TODO.md  pyproject.toml
agentrunner/: __init__.py  __main__.py  cli.py
agentrunner/docs/: ARCHITECTURE.md  ARTIFACT_CONTRACTS.md  CHAINED_PROOF_RUN_NOTES.md  CHEATSHEET.md  DEMO_QUICKSTART_WALKTHROUGH.md  FIRST_REAL_RUN.md  GIT_FLOW.md  IMPLEMENTATION_NOTES_AUTONOMY_PHASES.md  INITIATIVE_FIRST_RUN_NOTES.md  INITIATIVE_PHASE_MODEL.md  INITIATIVE_STATUS_MESSAGES.md  MERGER_NONFF_PROOF.md  MERGER_PROOF_NOTES.md  MERGER_PROOF_SUCCESS.md  OPERATOR_MQTT_BROADCAST.md  (+4 more)
scripts/: bootstrap_pytest.sh  conftest.py  smoke_initiative_status_messages.py  test_cli_router.py  test_cli_surface.py  test_enqueue_initiative_idempotent_noop.py  test_enqueue_initiative_state_guardrail.py  test_initiative_closure_pointer_cleanup.py  test_initiative_github_issue_sync.py  test_initiative_github_lifecycle_updates.py  test_initiative_status_discord_adapter.py  test_initiative_status_lifecycle_wiring.py  test_initiative_tail_case_cleanup_regression.py  test_invoker_closure_handoff_adoption.py  test_invoker_terminal_closure_guard.py  test_merger_passback_remediation_routing.py  test_merger_passback_review_to_closure_retry.py  test_merger_passback_target_branch_missing.py  test_merger_passback_unsafe_blocker_halt.py  test_operator_api.py  test_operator_cli.py  test_operator_data.py  test_operator_mqtt.py  test_operator_tui.py  test_operator_web.py  test_reliability_poll_closure_watch.py  test_status_artifact.py  test_terminal_success_initiative_boundary.py
(+44 files in other folders)
